package de.daniel.marlinghaus.vidr.incompatibility.checker;

import de.daniel.marlinghaus.vidr.incompatibility.vo.IncompatibilityDependency;
import de.daniel.marlinghaus.vidr.incompatibility.vo.IncompatibilityDependencyCheckResult;

public class DynamicBytecodeImprovementChecker extends AbstractIncompatibilityChecker {

  @Override
  protected IncompatibilityDependencyCheckResult doCheck(IncompatibilityDependency dependency) {
    return null;
  }
}
