package de.daniel.marlinghaus.vidr.incompatibility.checker;

import de.daniel.marlinghaus.vidr.incompatibility.vo.IncompatibilityDependency;
import de.daniel.marlinghaus.vidr.incompatibility.vo.IncompatibilityDependencyCheckResult;

public class GenerateTestsChecker extends AbstractIncompatibilityChecker {

  @Override
  protected IncompatibilityDependencyCheckResult doCheck(IncompatibilityDependency dependency) {
    return null;
  }
}
