package de.daniel.marlinghaus.vidr.incompatibility.type;

/**
 * subdivision of behaviour incompatibilities
 */
//TODO refer to academic source
public enum BehaviourIncompatibilityType {

  REFLECTION_ORIGIN,
  SEMANTIC_ORIGIN
}
