package de.daniel.marlinghaus.vidr.incompatibility.type;


/**
 * subdivision of binary incompatibilities
 */
//TODO refer to academic source
public enum BinaryIncompatibilityType {
  WRONG_DEPENDENCY_VERSION,
  REDUNDANT_DEPENDENCY_CLASS,
  REDUNDANT_APPLICATION_CLASS
}
